tests/snapshots/test_derive_input__pub_restricted_super.snap
---
created: "2019-04-06T05:46:03.372511650Z"
creator: insta@0.7.4
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [],
    vis: Restricted(
        VisRestricted {
            pub_token: Pub,
            paren_token: Paren,
            in_token: None,
            path: Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident(
                            super,
                        ),
                        arguments: None,
                    },
                ],
            },
        },
    ),
    ident: Ident(
        S,
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None,
    },
    data: Struct(
        DataStruct {
            struct_token: Struct,
            fields: Unit,
            semi_token: Some(
                Semi,
            ),
        },
    ),
}
