tests/snapshots/test_derive_input__struct-2.snap
---
created: "2019-04-06T05:46:03.385565379Z"
creator: insta@0.7.4
source: tests/test_derive_input.rs
expression: syntax_tree
---
List(
    MetaList {
        ident: Ident(
            derive,
        ),
        paren_token: Paren,
        nested: [
            Meta(
                Word(
                    Ident(
                        Debug,
                    ),
                ),
            ),
            Comma,
            Meta(
                Word(
                    Ident(
                        Clone,
                    ),
                ),
            ),
        ],
    },
)
