tests/snapshots/test_derive_input__struct.snap
---
created: "2019-03-11T05:40:04.829338243Z"
creator: insta@0.7.1
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [
        Attribute {
            pound_token: Pound,
            style: Outer,
            bracket_token: Bracket,
            path: Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident(
                            derive
                        ),
                        arguments: None
                    }
                ]
            },
            tts: TokenStream [
                Group {
                    delimiter: Parenthesis,
                    stream: TokenStream [
                        Ident {
                            sym: Debug
                        },
                        Punct {
                            op: ',',
                            spacing: Alone
                        },
                        Ident {
                            sym: Clone
                        }
                    ]
                }
            ]
        }
    ],
    vis: Public(
        VisPublic {
            pub_token: Pub
        }
    ),
    ident: Ident(
        Item
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None
    },
    data: Struct(
        DataStruct {
            struct_token: Struct,
            fields: Named(
                FieldsNamed {
                    brace_token: Brace,
                    named: [
                        Field {
                            attrs: [],
                            vis: Public(
                                VisPublic {
                                    pub_token: Pub
                                }
                            ),
                            ident: Some(
                                Ident(
                                    ident
                                )
                            ),
                            colon_token: Some(
                                Colon
                            ),
                            ty: Path(
                                TypePath {
                                    qself: None,
                                    path: Path {
                                        leading_colon: None,
                                        segments: [
                                            PathSegment {
                                                ident: Ident(
                                                    Ident
                                                ),
                                                arguments: None
                                            }
                                        ]
                                    }
                                }
                            )
                        },
                        Comma,
                        Field {
                            attrs: [],
                            vis: Public(
                                VisPublic {
                                    pub_token: Pub
                                }
                            ),
                            ident: Some(
                                Ident(
                                    attrs
                                )
                            ),
                            colon_token: Some(
                                Colon
                            ),
                            ty: Path(
                                TypePath {
                                    qself: None,
                                    path: Path {
                                        leading_colon: None,
                                        segments: [
                                            PathSegment {
                                                ident: Ident(
                                                    Vec
                                                ),
                                                arguments: AngleBracketed(
                                                    AngleBracketedGenericArguments {
                                                        colon2_token: None,
                                                        lt_token: Lt,
                                                        args: [
                                                            Type(
                                                                Path(
                                                                    TypePath {
                                                                        qself: None,
                                                                        path: Path {
                                                                            leading_colon: None,
                                                                            segments: [
                                                                                PathSegment {
                                                                                    ident: Ident(
                                                                                        Attribute
                                                                                    ),
                                                                                    arguments: None
                                                                                }
                                                                            ]
                                                                        }
                                                                    }
                                                                )
                                                            )
                                                        ],
                                                        gt_token: Gt
                                                    }
                                                )
                                            }
                                        ]
                                    }
                                }
                            )
                        }
                    ]
                }
            ),
            semi_token: None
        }
    )
}
