tests/snapshots/test_derive_input__union.snap
---
created: "2019-04-06T05:46:03.379296830Z"
creator: insta@0.7.4
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [],
    vis: Inherited,
    ident: Ident(
        MaybeUninit,
    ),
    generics: Generics {
        lt_token: Some(
            Lt,
        ),
        params: [
            Type(
                TypeParam {
                    attrs: [],
                    ident: Ident(
                        T,
                    ),
                    colon_token: None,
                    bounds: [],
                    eq_token: None,
                    default: None,
                },
            ),
        ],
        gt_token: Some(
            Gt,
        ),
        where_clause: None,
    },
    data: Union(
        DataUnion {
            union_token: Union,
            fields: FieldsNamed {
                brace_token: Brace,
                named: [
                    Field {
                        attrs: [],
                        vis: Inherited,
                        ident: Some(
                            Ident(
                                uninit,
                            ),
                        ),
                        colon_token: Some(
                            Colon,
                        ),
                        ty: Tuple(
                            TypeTuple {
                                paren_token: Paren,
                                elems: [],
                            },
                        ),
                    },
                    Comma,
                    Field {
                        attrs: [],
                        vis: Inherited,
                        ident: Some(
                            Ident(
                                value,
                            ),
                        ),
                        colon_token: Some(
                            Colon,
                        ),
                        ty: Path(
                            TypePath {
                                qself: None,
                                path: Path {
                                    leading_colon: None,
                                    segments: [
                                        PathSegment {
                                            ident: Ident(
                                                T,
                                            ),
                                            arguments: None,
                                        },
                                    ],
                                },
                            },
                        ),
                    },
                ],
            },
        },
    ),
}
